# bitsender

./: .bumpversion.cfg  .gitignore  Pipfile  README.md  manage.py  pyproject.toml
docker/: Dockerfile  Makefile
src/: app.py
src/templates/: base.html  index.html  message.html  origina.html  params.html
