[tool.poetry]
name = "bitsender"
version = "0.1.0"
description = ""
authors = ["sax <s.apostolico@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
